miniextendr-macros/tests/ui/derive_dataframe_empty_struct.rs
//! Test: derive DataFrameRow on zero-field struct should fail.

use miniextendr_macros::DataFrameRow;

#[derive(DataFrameRow)]
struct Empty {}

fn main() {}
